--- a/Main.tex
+++ b/Main.tex
@@ -417,4 +417,5 @@ Mỗi học sinh của lóp $10T2$ đều biết chơi cầu lông hoặc bóng 
 \begin{ex}
 Cho hai tập hợp $C=(1 ; 3)$ và $D=[m ; m+4]$. Tìm $m$ để $C \cap D=C$
 \end{ex} 
+%Thanh đã chỉnh sửa
 \end{document}
